--- a/src/app/heroes/list/list.component.html
+++ b/src/app/heroes/list/list.component.html
@@ -1,14 +1,16 @@
 <h3>Listado de Héroes</h3>
 
+<!--
 <div *ngIf="deletedHeroFirst; else nothingWasDeleted">
   <h3>Héroe borrado <small class="text-danger"> {{ deletedHeroFirst }} </small> </h3>
 </div>
 
 <ng-template #nothingWasDeleted>
-  <!--<h3 *ngIf="!deletedHeroFirst" >No ha borrado nada</h3>-->
   <h3>No ha borrado nada</h3>
 </ng-template>
+-->
 
+<!--
 <button
 *ngIf="heroNames.length > 0"
   class="btn btn-outline-danger"
@@ -21,8 +23,20 @@
     class="list-group-item">{{ name}}</li>
 </ul>
 
+<ul class="mt-2 list-group">
+
+  <li class="list-group-item">
+
+  </li>
+</ul>
+
 <button
   *ngIf="heroNames.length > 0"
   class="btn btn-outline-danger"
   (click)="removeLastHero()">Borrar último héroe
 </button>
+-->
+
+
+
+
