--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<!--
 <h1> {{title}} </h1>
 
 <h2> {{ContingutText}} </h2>
@@ -5,16 +7,13 @@
 <hr>
 
 
-
-<!--<button (click)="DecrementamentaCounter(-1)">Disminuye</button>-->
-<!--<button (click)="AumentaCounter()" >+1</button>-->
-<!--<button (click)="DecrementamentaCounter()">-1</button>-->
-
-
-
--<app-counter></app-counter>
+<app-counter></app-counter>
 <hr>
 <app-counter></app-counter>
 <hr>
 <app-heroes-hero></app-heroes-hero>
+<hr>
 <app-heroes-list></app-heroes-list>
+<hr>
+-->
+<app-mm-mj-main-page ></app-mm-mj-main-page>
